[package]
name = "edi"
version = "0.2.1"
authors = ["Tim Gremore <tim@headway.io>"]
edition = "2018"
license-file = "LICENSE.md"
description = "Parser for X12 EDI files"
homepage = "https://github.com/headwayio/edi"
documentation = "https://docs.rs/edi"
repository = "https://github.com/headwayio/edi"
readme = "README.md"

[dependencies]
csv = "1.1"
lazy_static = "1.4.0"
serde = { version = "1.0.101", features = ["derive"] }
rust-embed = { version = "8.3.0", features = ["interpolate-folder-path", "debug-embed"] }
